// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createReactor should initialize 1`] = `
<div>
  <span>
    Not initialized
  </span>
  <button
    onClick={[Function]}
  >
    Initialize
  </button>
  <div>
    <button
      onClick={[Function]}
    >
      Get Version
    </button>
    <span>
      Ready To call
    </span>
  </div>
</div>
`;

exports[`createReactor should initialize 2`] = `
<div>
  <span>
    Initialized
  </span>
  <button
    onClick={[Function]}
  >
    Initialize
  </button>
  <div>
    <button
      onClick={[Function]}
    >
      Get Version
    </button>
    <span>
      Ready To call
    </span>
  </div>
</div>
`;

exports[`createReactor should initialize 3`] = `
<div>
  <span>
    Initialized
  </span>
  <button
    onClick={[Function]}
  >
    Initialize
  </button>
  <div>
    <button
      onClick={[Function]}
    >
      Get Version
    </button>
    <span>
      Ready To call
    </span>
  </div>
</div>
`;

exports[`createReactor should initialize 4`] = `
<div>
  <span>
    Initialized
  </span>
  <button
    onClick={[Function]}
  >
    Initialize
  </button>
  <div>
    <button
      onClick={[Function]}
    >
      Get Version
    </button>
    <span>
      0.2.0
    </span>
  </div>
</div>
`;
